add api endpoint to set / update key
